# Quantum-information

./: .gitignore  .mcp.json  AGENTS.md  Justfile  LICENSE  README.md  extract_pdf.py  extract_toc.py  mermaid_validator.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml
docs/: _quarto.yml  _量子情報における部分トレースと純粋化  (1).md  channel_equivalence_deep_dive.md  comprehensive_measurement_guide.md  example_2.39_steering.md  index.qmd  measurement_collapse_extension.md  notes.qmd  partial-trace_reduction_purification.md  povm_vs_standard_measurement.md  quantum_channel_guide.md  research-quarto.md  theory.qmd
docs/chapters/: chapter1.qmd  chapter2.qmd  index.qmd
docs/divided/: index.qmd
docs/support/: index.qmd  justfile-migration-guide.md  quarto-migration-guide.md
docs/templates/: math_focused_template.qmd  styles.css
quarto/: _quarto.yml  index.qmd  preamble.tex  textbook.qmd
quarto/qiskit/: index.qmd
quarto/support/: index.qmd  justfile-migration-guide.md  quarto-migration-guide.md
quarto/templates/: math_focused_template.qmd  quantum_textbook_template.qmd  quarto_feature_showcase.qmd  styles.css  theory_template.qmd
quarto/textbook/: chapter1.qmd  chapter3.qmd  index.qmd
quarto/textbook-preskill/: textbook.qmd
quarto/textbook-watrous/: chapter2.qmd  textbook.qmd
references/transcriptions/: 2-1.md  2-2.md  validatation.md
research/guidelines/: IMPLEMENTATION_GUIDE_INDEX.md  preskill_chap1_mapping.md  preskill_chap2_mapping.md  preskill_chapter_mapping_template.md  preskill_pdf_mapping.md  quarto_best_practices.md  quarto_config_improvement.md  quarto_heading_numbering.md  writing_policy.md
tests/: test_placeholder.py
tools/: check_env.py  clean.py  dev_server.py  extract_pdf.py  extract_pdf_content.py  extract_pdf_latex.py  merge_preskill_pdf.py  process_pdf_page.py  quarto_watcher.py  render_pdf.py  validate_docs.py
(+86 files in other folders)
