[project]
name = "quantum-information"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.8",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "pyvis>=0.3.2",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
    "ruff>=0.14.10",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "pylatexenc>=2.10",
]
