[project]
name = "quantum-information"
version = "0.1.0"
description = "Study notes and research environment for Quantum Information based on Preskill and Watrous textbooks."
authors = [
    { name = "Daisuke Yamashiki" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "icecream>=2.1.8",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pix2text>=1.1.6",
    "plotly>=6.5.0",
    "pymupdf>=1.27.2.2",
    "pypdf2>=3.0.1",
    "pyvis>=0.3.2",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
    "scipy>=1.16.3",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pylatexenc>=2.10",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
